--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -1,14 +1,14 @@
 {% block navBar %}
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Kimanjou</a>
+            <a class="navbar-brand" href="{{ path('app_kimanjou') }}">Kimanjou</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Kimanjou</a>
+                        <a class="nav-link active" aria-current="page" href="{{ path('app_kimanjou') }}">Kimanjou</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kifékoi</a>
