add history and location entity

--- a/templates/kifekoi/index.html.twig
+++ b/templates/kifekoi/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'layout.html.twig' %}
 
-{% block title %}Kimanjou{% endblock %}
+{% block title %}Kifékoi{% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1 class="text-center my-4">Kimanjou</h1>
+    <h1 class="text-center my-4">Kifékoi</h1>
 
     <table class="table">
         <thead>
