--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -11,7 +11,7 @@
                         <a class="nav-link active" aria-current="page" href="{{ path('app_kimanjou') }}">Kimanjou</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Kifékoi</a>
+                        <a class="nav-link" href="{{ path('app_kifekoi') }}">Kifékoi</a>
                     </li>
                 </ul>
             </div>
