add admin user controller

--- a/templates/kifekoi/index.html.twig
+++ b/templates/kifekoi/index.html.twig
@@ -3,17 +3,17 @@
 {% block title %}Kifékoi{% endblock %}
 
 {% block body %}
-<div class="container">
-    <h1 class="text-center my-4">Kifékoi</h1>
+<style>
+    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+</style>
 
-    <table class="table">
-        <thead>
-        <tr>
-            {% for day in week %}
-                <th>{{ day }}</th>
-            {% endfor %}
-        </tr>
-        </thead>
-    </table>
+<div class="example-wrapper">
+    <h1>Hello {{ controller_name }}! ✅</h1>
+
+    <ul>
+        <li>Your controller at <code><a href="{{ '/Users/pil/PhpstormProjects/kimanjou/src/Controller/KifekoiController.php'|file_link(0) }}">src/Controller/KifekoiController.php</a></code></li>
+        <li>Your template at <code><a href="{{ '/Users/pil/PhpstormProjects/kimanjou/templates/kifekoi/index.html.twig'|file_link(0) }}">templates/kifekoi/index.html.twig</a></code></li>
+    </ul>
 </div>
 {% endblock %}
