--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -13,6 +13,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_kifekoi') }}">Kifékoi</a>
                     </li>
+                    {% if app.user %}
+                        {{ app.user.email }}
+                        <li><a class="nav-link" href="{{ path('app_logout') }}"> Se déconnecter</a></li>
+                    {% else %}
+                        <li><a class="nav-link" href="{{ path('app_login') }}"> Se connecter</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
