--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -3,3 +3,18 @@
 body {
     background-color: lightgray;
 }
+
+// Images de la partie admin
+.img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0 1px 2px 0, rgba(60, 64, 67, 0.15) 0 2px 6px 2px;
+}
+
+// Liens de la partie admin
+a {
+    text-decoration: none;
+    color: black;
+}
