--- a/templates/admin_home/index.html.twig
+++ b/templates/admin_home/index.html.twig
@@ -1,20 +1,30 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout_admin.html.twig' %}
 
-{% block title %}Hello AdminHomeController!{% endblock %}
+{% block stylesheets %}{{ encore_entry_link_tags('admin') }}{% endblock %}
+
+{% block title %}Administration{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="container">
+        <h1 class="text-center my-4">Administration</h1>
+        <div class="row justify-content-around mt-5">
+            <div class="col-3">
+                <div>
+                    <a href="{{ path('app_admin_user') }}"><img class="img" src="{{ asset('build/images/admin_users.2032265d.jpg') }}" alt="Image gestion des utilisateurs"></a>
+                </div>
+                <div class="text-center mt-2">
+                    <a href="{{ path('app_admin_user') }}"><h4>Gestion des utilisateurs</h4></a>
+                </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/pil/PhpstormProjects/kimanjou/src/Controller/AdminHomeController.php'|file_link(0) }}">src/Controller/AdminHomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/pil/PhpstormProjects/kimanjou/templates/admin_home/index.html.twig'|file_link(0) }}">templates/admin_home/index.html.twig</a></code></li>
-    </ul>
-</div>
+            </div>
+            <div class="col-3">
+                <div>
+                    <a href="{{ path('app_admin_location') }}"><img class="img" src="{{ asset('build/images/admin_location.87225ca9.jpg') }}" alt="Image gestion des utilisateurs"></a>
+                </div>
+                <div class="text-center mt-2">
+                    <a href="{{ path('app_admin_location') }}"><h4>Gestion des lieux</h4></a>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
