--- a/templates/admin_user/index.html.twig
+++ b/templates/admin_user/index.html.twig
@@ -1,20 +1,38 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout_admin.html.twig' %}
 
 {% block title %}Hello AdminUserController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<div class="container">
+    <h1 class="text-center my-4">Gestion des utilisateurs</h1>
+    <div class="text-end my-3">
+        <a class="btn btn-danger" href="{{ path('app_admin_home') }}">Retour</a>
+    </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/pil/PhpstormProjects/kimanjou/src/Controller/AdminUserController.php'|file_link(0) }}">src/Controller/AdminUserController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/pil/PhpstormProjects/kimanjou/templates/admin_user/index.html.twig'|file_link(0) }}">templates/admin_user/index.html.twig</a></code></li>
-    </ul>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Nom</th>
+                <th>Prénom</th>
+                <th>Email</th>
+                <th>Role</th>
+                <th colspan="2">Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for key, user in users %}
+                <tr>
+                    <th>{{ key + 1 }}</th>
+                    <td>{{ user.lastName }}</td>
+                    <td>{{ user.firstName }}</td>
+                    <td>{{ user.email }}</td>
+                    <td>{{ user.roles[0] == 'ROLE_USER' ? 'Utilisateur' : 'Administrateur' }}</td>
+                    <td><a href="#">Modifier</a></td>
+                    <td><a href="#">Supprimer</a></td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
 {% endblock %}
