change bdd and registration

--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -1,7 +1,7 @@
 {% block navBar %}
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{ path('app_kimanjou') }}">Kimanjou</a>
+            <a class="navbar-brand mx-3" href="{{ path('app_kimanjou') }}">Kimanjou</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -21,7 +21,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
                         </li>
-                        <li>{{ app.user.email }}</li>
+                        <li class="align-self-center mx-4">{{ app.user.nickName }}</li>
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
