--- a/templates/admin_location/index.html.twig
+++ b/templates/admin_location/index.html.twig
@@ -1,20 +1,38 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout_admin.html.twig' %}
 
-{% block title %}Hello AdminLocationController!{% endblock %}
+{% block title %}Gestion des lieux{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="container">
+        <h1 class="text-center my-4">Gestion des Lieux</h1>
+        <div class="text-end my-3">
+            <a class="btn btn-danger" href="{{ path('app_admin_home') }}">Retour</a>
+        </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/pil/PhpstormProjects/kimanjou/src/Controller/AdminLocationController.php'|file_link(0) }}">src/Controller/AdminLocationController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/pil/PhpstormProjects/kimanjou/templates/admin_location/index.html.twig'|file_link(0) }}">templates/admin_location/index.html.twig</a></code></li>
-    </ul>
-</div>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Nom</th>
+                    <th>Adresse</th>
+                    <th>Code Postal</th>
+                    <th>Ville</th>
+                    <th colspan="2">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for key, location in locations %}
+                    <tr>
+                        <th>{{ key + 1 }}</th>
+                        <td>{{ location.name }}</td>
+                        <td>{{ location.address }}</td>
+                        <td>{{ location.postCode }}</td>
+                        <td>{{ location.city }}</td>
+                        <td><a href="#">Modifier</a></td>
+                        <td><a href="#">Supprimer</a></td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
