--- a/templates/admin_user/index.html.twig
+++ b/templates/admin_user/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout_admin.html.twig' %}
 
-{% block title %}Hello AdminUserController!{% endblock %}
+{% block title %}Gestion des utilisateurs{% endblock %}
 
 {% block body %}
 <div class="container">
@@ -8,8 +8,7 @@
     <div class="text-end my-3">
         <a class="btn btn-danger" href="{{ path('app_admin_home') }}">Retour</a>
     </div>
-
-    <table class="table">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>#</th>
