--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -1,2 +1,3 @@
 {% extends 'base.html.twig' %}
+{% block form %}{% endblock %}
 {% block header %}{% include 'include/_navbar.html.twig' %}{% endblock %}
