--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -19,9 +19,15 @@
                     {% endif %}
                     {% if app.user %}
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_profile_show', {'id': app.user.id}) }}">Profil</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
                         </li>
-                        <li class="align-self-center mx-4">{{ app.user.nickName }}</li>
+                        <li class="align-self-center mx-4 d-flex">
+                            <div><img src="{{ asset('build/images/profile_picture.4e2b491b.png') }}" alt="Image de profil"></div>
+                            <div>{{ app.user.nickName }}</div>
+                        </li>
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
