--- a/templates/admin_location/_delete_form.html.twig
+++ b/templates/admin_location/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_admin_user_delete', {'id': user.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cet utilisateur?');">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
+<form method="post" action="{{ path('app_admin_location_delete', {'id': location.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer ce lieu?');">
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ location.id) }}">
     <button class="btn btn-primary"><i class="bi bi-trash-fill"></i></button>
 </form>
