--- a/templates/admin_location/edit.html.twig
+++ b/templates/admin_location/edit.html.twig
@@ -2,17 +2,17 @@
 
 {% block title %}Edit User{% endblock %}
 
-{% block form %}{% form_theme userForm 'bootstrap_5_layout.html.twig' %}{% endblock %}
+{% block form %}{% form_theme locationForm 'bootstrap_5_layout.html.twig' %}{% endblock %}
 
 {% block body %}
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-5">
-                <h1 class="text-center my-5">Modification de {{ user.nickName }}</h1>
+                <h1 class="text-center my-5">Modification de {{ location.name }}</h1>
                 <div class="text-end my-3">
-                    <a class="btn btn-danger" href="{{ path('app_admin_user', {'id': app.user.id}) }}">Retour</a>
+                    <a class="btn btn-danger" href="{{ path('app_admin_location') }}">Retour</a>
                 </div>
-                {{ include('admin_user/_form.html.twig', {'button_label': 'Update'}) }}
+                {{ include('admin_location/_form.html.twig', {'button_label': 'Update'}) }}
             </div>
         </div>
     </div>
