--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -25,7 +25,9 @@
                             <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
                         </li>
                         <li class="align-self-center mx-4 d-flex">
-                            <div><img src="{{ asset('build/images/profile_picture.4e2b491b.png') }}" alt="Image de profil"></div>
+                            <div><img src="{{ app.user.profilePicture != '' ?
+                                asset('uploads/profile_pictures/' ~ app.user.profilePicture) :
+                                asset('build/images/profile_picture.4e2b491b.png') }}" alt="Image de profil"></div>
                             <div>{{ app.user.nickName }}</div>
                         </li>
                     {% else %}
