--- a/templates/kimanjou/index.html.twig
+++ b/templates/kimanjou/index.html.twig
@@ -22,7 +22,10 @@
                 {% for user in users %}
                     <tr>
                         <th class="align-middle d-flex">
-                            <div><img src="{{ asset('build/images/profile_picture.4e2b491b.png') }}" alt="Image de profil"></div>
+                            <div><img src="{{ user.profilePicture != '' ?
+                                asset('uploads/profile_pictures/' ~ user.profilePicture) :
+                                asset('build/images/profile_picture.4e2b491b.png') }}" alt="Image de profil">
+                            </div>
                             <div class="align-self-center">{{ user.nickName }}</div>
                         </th>
                         {% for day in week %}
