--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -6,11 +6,12 @@ body {
 }
 
 // Images de la partie admin
-.img {
-    width: 100%;
-    height: 200px;
+img {
+    width: 32px;
+    height: 32px;
     object-fit: cover;
     border-radius: 8px;
+    margin: 0 10px;
     box-shadow: rgba(60, 64, 67, 0.3) 0 1px 2px 0, rgba(60, 64, 67, 0.15) 0 2px 6px 2px;
 }
 
@@ -18,4 +19,9 @@ body {
 a {
     text-decoration: none;
     color: black;
+}
+
+// Margin concernant les formulaires
+.margin-bottom-form {
+    height: 61.5px;
 }
