--- a/templates/admin_user/index.html.twig
+++ b/templates/admin_user/index.html.twig
@@ -14,6 +14,7 @@
         <thead>
             <tr>
                 <th>#</th>
+                <th>Image</th>
                 <th>Nom</th>
                 <th>Prénom</th>
                 <th>Surnom</th>
@@ -26,6 +27,10 @@
             {% for key, user in users %}
                 <tr>
                     <th onclick="window.location='{{ path('app_admin_user_edit', {'id': user.id}) }}'">{{ key + 1 }}</th>
+                    <th onclick="window.location='{{ path('app_admin_user_edit', {'id': user.id}) }}'"><div><img src="{{ user.profilePicture != '' ?
+                            asset('uploads/profile_pictures/' ~ user.profilePicture) :
+                            asset('build/images/profile_picture.4e2b491b.png') }}" alt="Image de profil">
+                        </div></th>
                     <td onclick="window.location='{{ path('app_admin_user_edit', {'id': user.id}) }}'">{{ user.lastName }}</td>
                     <td onclick="window.location='{{ path('app_admin_user_edit', {'id': user.id}) }}'">{{ user.firstName }}</td>
                     <td onclick="window.location='{{ path('app_admin_user_edit', {'id': user.id}) }}'">{{ user.nickName }}</td>
