--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -8,18 +8,18 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ path('app_kimanjou') }}">Kimanjou</a>
+                        <a {% if route_name == "app_kimanjou" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ path('app_kimanjou') }}">Kimanjou</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_kifekoi') }}">Kifékoi</a>
+                        <a {% if route_name == "app_kifekoi" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ path('app_kifekoi') }}">Kifékoi</a>
                     </li>
                     {% if  is_granted("ROLE_ADMIN") %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_admin_home') }}">Administration</a></li>
+                            <a {% if route_name == "app_admin_home" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ path('app_admin_home') }}">Administration</a></li>
                     {% endif %}
                     {% if app.user %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_profile', {'id': app.user.id}) }}">Profil</a>
+                            <a {% if route_name == "app_profile" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ path('app_profile', {'id': app.user.id}) }}">Profil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
