--- a/templates/admin_home/index.html.twig
+++ b/templates/admin_home/index.html.twig
@@ -10,7 +10,7 @@
         <div class="row justify-content-around mt-5">
             <div class="col-3">
                 <div>
-                    <a href="{{ path('app_admin_user') }}"><img class="img" src="{{ asset('build/images/admin_users.2032265d.jpg') }}" alt="Image gestion des utilisateurs"></a>
+                    <a href="{{ path('app_admin_user') }}"><img class="admin-user" src="{{ asset('build/images/admin_users.2032265d.jpg') }}" alt="Image gestion des utilisateurs"></a>
                 </div>
                 <div class="text-center mt-2">
                     <a href="{{ path('app_admin_user') }}"><h4>Gestion des utilisateurs</h4></a>
@@ -19,7 +19,7 @@
             </div>
             <div class="col-3">
                 <div>
-                    <a href="{{ path('app_admin_location') }}"><img class="img" src="{{ asset('build/images/admin_location.87225ca9.jpg') }}" alt="Image gestion des utilisateurs"></a>
+                    <a href="{{ path('app_admin_location') }}"><img class="admin-user" src="{{ asset('build/images/admin_location.87225ca9.jpg') }}" alt="Image gestion des utilisateurs"></a>
                 </div>
                 <div class="text-center mt-2">
                     <a href="{{ path('app_admin_location') }}"><h4>Gestion des lieux</h4></a>
