--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -7,12 +7,11 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
+                    {% if app.user %}
                     <li class="nav-item">
                         <a {% if route_name == "app_kimanjou" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ path('app_kimanjou') }}">Kimanjou</a>
                     </li>
-                    <li class="nav-item">
-                        <a {% if route_name == "app_kifekoi" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ path('app_kifekoi') }}">Kifékoi</a>
-                    </li>
+                    {% endif %}
                     {% if  is_granted("ROLE_ADMIN") %}
                         <li class="nav-item">
                             <a {% if route_name == "app_admin_home" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ path('app_admin_home') }}">Administration</a></li>
@@ -25,7 +24,7 @@
                             <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
                         </li>
                         <li class="align-self-center mx-4 d-flex">
-                            <div><img src="{{ app.user.profilePicture != '' ?
+                            <div><img class="navbar-picture" src="{{ app.user.profilePicture != '' ?
                                 asset('uploads/profile_pictures/' ~ app.user.profilePicture) :
                                 asset('build/images/profile_picture.4e2b491b.png') }}" alt="Image de profil"></div>
                             <div class="align-self-center">{{ app.user.nickName }}</div>
@@ -33,9 +32,6 @@
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_register') }}">Inscription</a>
                         </li>
                     {% endif %}
                 </ul>
