--- a/templates/kimanjou/edit.html.twig
+++ b/templates/kimanjou/edit.html.twig
@@ -26,7 +26,7 @@
                 <tr>
                     <th {{ (user.id == app.user.id) ? 'class="align-middle d-flex margin-bottom-form"' : 'class="align-middle d-flex"' }}>
                         <div>
-                            <img src="{{ user.profilePicture != '' ?
+                            <img class="profil-picture" src="{{ user.profilePicture != '' ?
                             asset('uploads/profile_pictures/' ~ user.profilePicture) :
                             asset('build/images/profile_picture.4e2b491b.png') }}" alt="Image de profil">
                         </div>
@@ -41,7 +41,9 @@
                     {% else %}
                         {% for history in histories %}
                             {% if (history[it]) %}
-                                <td>{{ history[it].location.name }}</td>
+                                <td class="align-middle"><img class="location-picture" src="{{ user.profilePicture != '' ?
+                            asset('uploads/location_pictures/' ~ history[it].location.locationPicture) :
+                            asset('build/images/profile_picture.4e2b491b.png') }}" alt="Image du lieu">{{ history[it].location.name }}</td>
                             {% else %}
                                 <td></td>
                             {% endif %}
