--- a/templates/kimanjou/index.html.twig
+++ b/templates/kimanjou/index.html.twig
@@ -22,7 +22,7 @@
                     <tr>
                         <th class="align-middle d-flex">
                             <div>
-                                <img src="{{ user.profilePicture != '' ?
+                                <img class="profil-picture" src="{{ user.profilePicture != '' ?
                                 asset('uploads/profile_pictures/' ~ user.profilePicture) :
                                 asset('build/images/profile_picture.4e2b491b.png') }}" alt="Image de profil">
                             </div>
@@ -30,7 +30,9 @@
                         </th>
                         {% for history in histories %}
                             {% if (history[it]) %}
-                                <td>{{ history[it].location.name }}</td>
+                                <td class="align-middle"><img class="location-picture" src="{{ user.profilePicture != '' ?
+                                    asset('uploads/location_pictures/' ~ history[it].location.locationPicture) :
+                                    asset('build/images/profile_picture.4e2b491b.png') }}" alt="Image du lieu">{{ history[it].location.name }}</td>
                             {% else %}
                                 <td></td>
                             {% endif %}
@@ -40,4 +42,16 @@
             </tbody>
         </table>
     </div>
+
+    <div id="map"></div>
+    <script>
+
+        const map = L.map('map').setView([51.505, -0.09], 13);
+
+        const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            maxZoom: 19,
+            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+        }).addTo(map);
+
+    </script>
 {% endblock %}
