Possibilité d'ajouter des nouveaux lieux. Mise à jour de la navbar. Retrait de la map dans kimanjou. Modification du profile

--- a/templates/admin_location/_form.html.twig
+++ b/templates/admin_location/_form.html.twig
@@ -1,6 +1,6 @@
 {{ form_start(locationForm) }}
     {{ form_widget(locationForm) }}
     <div class="text-center mt-5">
-        <button class="btn btn-secondary" type="submit" >Modifier</button>
+        <button class="btn btn-secondary" type="submit" >{{ button_label|default('Sauvegarder') }}</button>
     </div>
 {{ form_end(locationForm) }}
