--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -28,9 +28,9 @@ a {
     box-shadow: rgba(60, 64, 67, 0.3) 0 1px 2px 0, rgba(60, 64, 67, 0.15) 0 2px 6px 2px;
 }
 
-.profil-picture {
-    width: 64px;
-    height: 64px;
+.profile-picture {
+    width: 50px;
+    height: 50px;
     object-fit: cover;
     border-radius: 8px;
     margin: 0 10px;
@@ -51,6 +51,15 @@ a {
     object-fit: cover;
     border-radius: 8px;
     margin: 0 10px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0 1px 2px 0, rgba(60, 64, 67, 0.15) 0 2px 6px 2px;
+}
+
+.profile-picture-edit {
+    width: 128px;
+    height: 128px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-bottom: 50px;
     box-shadow: rgba(60, 64, 67, 0.3) 0 1px 2px 0, rgba(60, 64, 67, 0.15) 0 2px 6px 2px;
 }
 
