--- a/templates/include/_navbar_admin.html.twig
+++ b/templates/include/_navbar_admin.html.twig
@@ -8,10 +8,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ path('app_kimanjou') }}">Kimanjou</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_kifekoi') }}">Kifékoi</a>
+                        <a class="nav-link active" aria-current="page" href="{{ path('app_kimanjou_edit', {'id': app.user.id}) }}">Kimanjou</a>
                     </li>
                     {% if app.user %}
                         <li class="nav-item">
